--- a/war/index.html
+++ b/war/index.html
@@ -1,27 +1,48 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!-- The HTML 4.01 Transitional DOCTYPE declaration-->
-<!-- above set at the top of the file will set     -->
-<!-- the browser's rendering engine into           -->
-<!-- "Quirks Mode". Replacing this declaration     -->
-<!-- with a "Standards Mode" doctype is supported, -->
-<!-- but may lead to some differences in layout.   -->
+<!DOCTYPE html>
+<html ng-app="aoc">
 
-<html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
+    <meta charset="utf-8" />
+    <title>Alors On Connait Ou Pas ?</title>
+    <script>document.write('<base href="' + document.location + '" />');</script>
+    <link href="style.css" rel="stylesheet" />
+    <script data-semver="1.4.9" src="https://code.angularjs.org/1.4.9/angular.js" data-require="angular.js@1.4.x"></script>
+    <script src="app.js"></script>
+    <script src="controller.js"></script>
+    <script src="directives.js"></script>
   </head>
 
-  <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="alorsonconnaitoupas">Alorsonconnaitoupas</a></td>
-      </tr>
-    </table>
+  <body ng-controller="MainCtrl">
+    
+      <div class="entete">
+        <h1>{{ title }}</h1>
+        <p class="button" ng-click="connexion">{{ connexion }}</p>
+      </div>
+      <div id="accueil" ng-show="affichageaccueil == 1">
+      <div class="accueil">
+        <p class="button" ng-click="lancerJeu()">{{ jouer }}</p>
+        <p class="button" ng-click="lancerScore()">{{ score }}</p>
+      </div>
+      <div class="regle">
+        <em>{{ regle }}</em>
+      </div>
+    </div>
+    <div  ng-show="jeuencours == 1">
+      <jeu prod="aocs[random()]"></jeu>
+    </div>
+    <div  ng-show="scoreencours == 1">
+      <h1> Tableau de score</h1>
+      {{ score[0] }}
+    </div>
   </body>
+
 </html>
+
+<script>
+  var init = function() {
+    console.log("init called");
+    window.init();
+  };
+</script>
+
+<script src="https://apis.google.com/js/client.js?onload=init"></script>
